syntax = "proto2";

option java_multiple_files = true;
package com.github.xenorith.ext.grpc;

message HelloRequest {
  optional string firstName = 1;
  optional string lastName = 2;

  optional string title = 1000;
}

message HelloResponse {
  optional string response = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);

  rpc formalHello(HelloRequest) returns (HelloResponse);
}
